--- a/CSS/guas.css
+++ b/CSS/guas.css
@@ -10,6 +10,7 @@
     background-size: 400%;
     border-radius: 20px;
     z-index: 1;
+    color: white;
 }
 
 .gua2 {
@@ -25,6 +26,7 @@
     background-size: 400%;
     border-radius: 20px;
     z-index: 1;
+    color: white;
 }
 
 .gua0 {
@@ -39,6 +41,7 @@
     background-size: 400%;
     border-radius: 20px;
     z-index: 1;
+    color: white;
 }
 
 .gua-1 {
@@ -53,4 +56,5 @@
     background-size: 400%;
     border-radius: 20px;
     z-index: 1;
+    color: white;
 }
